--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #000000;
-    font-family: "Ubuntu mono";
+    font-family: "Ubuntu mono", monospace;
     padding: 0 0.5em;
     transition: 1s;
 }
