--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@
     font-family: 'Ubuntu mono';
     src: url(UbuntuMono-Regular.ttf) format(ttf);
 }
+@font-face {
+    font-family: Quicksand;
+    src: url(Quicksand-Regular.ttf) format(ttf);
+}
 
 body {
     background-color: #000000;
-    font-family: "Ubuntu mono", monospace;
+    font-family: "Ubuntu mono";
     padding: 0 0.5em;
     transition: 1s;
 }
@@ -14,11 +18,11 @@ body {
     transition: 1s;
 }
 
-#text-container1, #text-container3 {
+#text-container1, #text-container3, #text-container4 {
     opacity: 0;
     transition: 1s;
 }
-#text-container1.visible, #text-container3.visible {
+#text-container1.visible, #text-container3.visible, #text-container4.visible {
     opacity: 100 !important;
     transition: 2s;
 }
@@ -67,26 +71,16 @@ span.para {
     transition: 1s;
 }
 
-#btngroup1 {
+#btngroup1, #btngroup2, #btngroup3, #btngroup4 {
     display: none;
     margin: 0 auto;
     width: fit-content;
     opacity: 0;
     transition: 1s;
 }
-#btngroup1.visible {
+#btngroup1.visible, #btngroup2.visible, #btngroup3.visible, #btngroup4.visible {
     opacity: 100;
-    transition: 2s;
-}
-
-#btngroup2 {
-    display: none;
     transition: 1s;
-    opacity: 0;
-}
-#btngroup2.visible {
-    opacity: 100;
-    transition: 2s;
 }
 
 .btn {
@@ -108,6 +102,35 @@ span.para {
 .btn.btn-secondary {
     color: white;
     background-color: rgba(95, 95, 95, 0.658);
+}
+.btn.btn-secondary:hover {
+    background-color: rgba(63, 63, 63, 0.658);
+}
+
+.fwcontainer {
+    /* border: solid 1px white; */
+    display: inline;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 99%;
+    height: 99%;
+    opacity: 0;
+    transition: 1s;
+    z-index: -2;
+}
+#firework.visible {
+    opacity: 100;
+    transition: 1s;
+}
+
+#music {
+    visibility: hidden;
+}
+
+#music-btn {
+    font-size: 18px;
+    padding: 10px;
 }
 
 @keyframes expand {
