--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     src: url(UbuntuMono-Regular.ttf) format(ttf);
 }
 @font-face {
-    font-family: Quicksand;
+    font-family: 'Quicksand';
     src: url(Quicksand-Regular.ttf) format(ttf);
 }
 @font-face {
