--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ span.para.text-white.change {
 
 .btn {
     font-size: 15px;
-    font-family: 'Quicksand';
+    font-family: "Quicksand";
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
